# blp-rs

./: .gitignore  Cargo.toml  README.md  build-all.sh  build-only.sh  build-publish.sh  build-settings.sh  build.rs  build.sh  main.rs  run-ui-test.sh
assets/locales/en/: core.ftl
assets/locales/ru/: core.ftl
assets/locales/tc/: core.ftl
assets/locales/uk/: core.ftl
assets/locales/zh/: core.ftl
preview/: PROMPT.md
src/: decode_bgra_jpeg.rs  header.rs  image_blp.rs  lib.rs  main.rs  mipmap.rs  read.rs  run.rs  texture_type.rs  version.rs
src/cli/: ensure_input_exists.rs  mod.rs  resolve_output_path.rs  to_blp_command.rs  to_png_command.rs
src/cli/command/: mod.rs  to_blp.rs  to_png.rs
src/core/: image.rs  mod.rs
src/core/decode/: direct.rs  image.rs  jpeg.rs  mod.rs
src/core/encode/: blp.rs  mod.rs
src/core/encode/utils/: mod.rs  pack_bgr_from_rgba.rs  pack_cmyk_from_rgba.rs  pack_rgb_from_rgba.rs  tj3_compress_cmyk.rs  tj3_compress_rgb_from_bgr.rs  tj3_compress_ycbcr_from_bgr.rs  tj3_compress_ycbcr_from_rgb.rs  tj3_err.rs
src/core/from/: blp.rs  image.rs
src/decode/: decode_direct.rs  decode_image.rs  decode_input.rs  decode_jpeg.rs  decode_result.rs  from_bytes.rs  input.rs  mod.rs  parse_blp.rs
src/encode/: encode_blp.rs  mod.rs
src/encode/blp/: encoder.rs  mod.rs  options.rs  report.rs  writer.rs
src/encode/blp/ctx/: build_layout_ctx.rs  ctx.rs  mod.rs  write_blp_full_jpegs.rs
src/encode/blp/jpeg/: build.rs  mod.rs  parse.rs  types.rs
src/encode/blp/unit/: build_units_with_shift.rs  encode_to_jpeg.rs  mod.rs  to_jpeg.rs  unit.rs
src/err/: app.rs  app_err.rs  args.rs  blp_err.rs  cause.rs  error.rs  localize.rs  mod.rs  tree.rs
src/export/: blp.rs  export.rs  export_blp.rs  export_png.rs  last_dir.rs  mod.rs  png.rs
src/ext/path/: ensure_readable.rs  mod.rs  to_abs_string_with_macros.rs
src/from/: buf.rs  buf_blp.rs  buf_image.rs  from_buf.rs  from_buf_blp.rs  from_buf_image.rs  mod.rs
src/ui/: dynamic_image_to_color_image.rs  fonts.rs  load_image.rs  mod.rs  run.rs  run_ui.rs  viewer.rs
src/ui/i18n/: lng_list.rs  mod.rs  prefs.rs
src/ui/viewer/: app.rs  draw_file_picker_bar.rs  draw_left_right_panels.rs  draw_panel_center.rs  draw_panel_left.rs  draw_panel_right.rs  draw_title_bar.rs  macos_paste_event.rs  mipmap_button_row.rs  mod.rs  resize_corner_br.rs  run.rs  run_native.rs  set_current_file.rs  set_initial_file.rs  style.rs  update.rs
src/ui/viewer/file_picker/: all_image_exts.rs  draw.rs  draw_file_picker.rs  file_picker_draw.rs  hotkey_pressed.rs  mod.rs  pick_from_clipboard.rs  poll_decoder.rs  safe_path.rs
src/ui/viewer/fonts/: fonts.rs  install_fonts.rs  mod.rs
src/ui/viewer/layout/: draw_spinner.rs  footer.rs  mod.rs  panel_center.rs  panel_left.rs  panel_right.rs  resize_corner_br.rs  title_bar.rs
src/ui/viewer/layout/file_picker/: all_image_exts.rs  draw_file_picker.rs  file_pick_input.rs  mod.rs  pick_from_clipboard.rs  pick_from_file.rs  poll_decoder.rs
src/ui/viewer/layout/file_saver/: file_saver.rs  mod.rs  pick_save_path.rs
src/ui/viewer/theme/: apply_cyberpunk_style.rs  apply_style.rs  mod.rs  paint_bg_maze_with_grain.rs  paint_bg_neon_maze.rs  paint_cyber_grid.rs
src/ui/widget/: mod.rs
src/util/: center_crop_to_pow2.rs  floor_pow2.rs  mod.rs  resolve_output_path.rs
test-data/to-blp/: a.blp
tests/: run-cli.sh  run-ui-cli.sh  run-ui.sh  run_without_features.rs  scan.rs  scan_header.rs  scan_patched.rs  to-blp.sh  to-png.sh  to_blp.rs
