[package]
name = "blp-rs"
version = "0.1.17"
authors = ["nazarpunk <nazarpunk@gmail.com>"]
repository = "https://github.com/WarRaft/blp-rs"
edition = "2024"

[dependencies]
image = "0.25.8"
num_enum = "0.7.4"
byteorder = "1.5.0"
directories = "6.0.0"
jpeg-decoder = "0.3.2"
walkdir = "2.5.0"
confy = "1.0.0"
clap = { version = "4.5.47", features = ["derive"] }
rfd = "0.15.4"
arboard = "3.6.1"
mozjpeg = "0.10.13"
eframe = { version = "0.32.3", features = ["wgpu", "persistence"] }
serde = { version = "1.0.223", features = ["derive"] }
normpath = "1.4.0"
path-absolutize = "3.1.1"
fluent-templates = "0.13.1"
sys-locale = "0.3.2"
tempfile = "3.22.0"
dunce = { version = "1.0.5" }
brotli-decompressor = "5.0.0"
sha1 = "0.11.0-rc.2"
hex = "0.4.3"
img-parts = "0.4.0"

[[bin]]
name = "blp_rs"
path = "main.rs"

[lib]
name = "blp_rs"
path = "src/lib.rs"

[package.metadata.bundle]
name = "blp-rs"
identifier = "com.warraft.blprs"
category = "public.app-category.developer-tools"
short_description = "BLP viewer/encoder"
long_description = "Fast BLP1/BLP2 viewer & tools"
# macOS-специфика:
osx_minimum_system_version = "10.13"
# Указываем СГЕНЕРЁННЫЕ файлы/глоб — и бандлер будет счастлив
icon = [
    "assets/generated/AppIcon.icns", # macOS
    "assets/generated/app.ico", # Windows
    "assets/generated/icons/hicolor/*/apps/*.png"    # Linux (hicolor)
]

[build-dependencies]
brotli = "8.0.2"
image = "0.25.8"
ico = "0.4.0"
icns = "0.3.1"   # https://crates.io/crates/icns
winresource = "0.1.23"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26.1"
objc = "0.2.7"

[profile.release]
lto = "thin"        # LTO включено только для финальной сборки
codegen-units = 1
opt-level = "z"
strip = "symbols"
panic = "abort"   # опционально; если мешает mozjpeg, закомментируй или ставь "unwind"

