[package]
name = "blp"
description = "Blizzard BLP image format reader/writer (Warcraft/World of Warcraft textures)"
authors = ["nazarpunk <nazarpunk@gmail.com>"]
version = "0.1.18"
repository = "https://github.com/WarRaft/blp-rs"
edition = "2024"
license = "MIT"
readme = "README.md"
keywords = ["blp", "warcraft", "image", "texture"]
categories = ["encoding", "graphics"]
exclude = [
    "preview/*",
    "target/*",
    "test-data/*",
    "*.sh",
]

[dependencies]
arboard = { version = "3.6.1", optional = true }
brotli-decompressor = "5.0.0"
byteorder = "1.5.0"
clap = { version = "4.5.48", features = ["derive"], optional = true }
confy = { version = "1.0.0", optional = true }
directories = { version = "6.0.0", optional = true }
dunce = { version = "1.0.5" }
eframe = { version = "0.32.3", features = ["wgpu", "persistence"], optional = true }
fluent-templates = "0.13.1"
hex = "0.4.3"
image = "0.25.8"
jpeg-decoder = "0.3.2"
normpath = "1.4.0"
num_enum = "0.7.4"
path-absolutize = "3.1.1"
rfd = { version = "0.15.4", optional = true }
serde = { version = "1.0.226", features = ["derive"], optional = true }
sha1 = "0.11.0-rc.2"
sys-locale = { version = "0.3.2", optional = true }
tempfile = "3.22.0"
turbojpeg = "1.3.3"
walkdir = "2.5.0"

[[bin]]
name = "blp-cli"
path = "src/bin/blp-cli.rs"
required-features = ["cli"]

[[bin]]
name = "blp-ui"
path = "src/bin/blp-ui.rs"
required-features = ["cli", "ui"]

[lib]
name = "blp"
path = "src/lib.rs"

[package.metadata.bundle]
name = "blp"
identifier = "com.warraft.blprs"
category = "public.app-category.developer-tools"
short_description = "BLP viewer/encoder"
long_description = "Fast BLP1/BLP2 viewer & tools"
# macOS-специфика:
osx_minimum_system_version = "10.13"
# Указываем СГЕНЕРЁННЫЕ файлы/глоб — и бандлер будет счастлив
icon = [
    "assets/generated/AppIcon.icns", # macOS
    "assets/generated/app.ico", # Windows
    "assets/generated/icons/hicolor/*/apps/*.png"    # Linux (hicolor)
]

[build-dependencies]
brotli = "8.0.2"
image = "0.25.8"
ico = "0.4.0"
icns = "0.3.1"   # https://crates.io/crates/icns
winresource = "0.1.23"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26.1"
objc = "0.2.7"

[profile.release]
lto = "thin"        # LTO включено только для финальной сборки
codegen-units = 1
opt-level = "z"
strip = "symbols"
panic = "abort"   # опционально; если мешает mozjpeg, закомментируй или ставь "unwind"
[features]
default = []
cli = ["dep:clap"]
ui = [
    "dep:arboard",
    "dep:confy",
    "dep:directories",
    "dep:eframe",
    "dep:rfd",
    "dep:serde",
    "dep:sys-locale",
]
